--- a/slave-deploy.yaml
+++ b/slave-deploy.yaml
@@ -28,6 +28,7 @@ spec:
         volumeMounts:
         - mountPath: /var/run/docker.sock
           name: docker-sock
+        resources: {}
       volumes:
       - name: docker-sock
         hostPath:
